tests/requests/invalid/008.py
from gunicorn.http.errors import LimitRequestHeaders
request = LimitRequestHeaders
